--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
