--- a/cdk_backend/package.json
+++ b/cdk_backend/package.json
@@ -25,6 +25,7 @@
     "@cdklabs/generative-ai-cdk-constructs": "^0.1.277",
     "aws-cdk-lib": "2.162.1",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "@aws-cdk/aws-amplify-alpha": "^2.149.0-alpha.0"
   }
 }
