--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-world-flags": "^1.6.0",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
