--- a/cdk_backend/package.json
+++ b/cdk_backend/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "22.5.4",
+    "@types/node": "^22.5.4",
     "aws-cdk": "^2.162.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -20,12 +20,12 @@
     "typescript": "~5.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-amplify-alpha": "^2.149.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
     "@cdklabs/generative-ai-cdk-constructs": "^0.1.277",
-    "aws-cdk-lib": "2.162.1",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21",
-    "@aws-cdk/aws-amplify-alpha": "^2.149.0-alpha.0"
+    "aws-cdk-lib": "^2.162.1",
+    "constructs": "^10.4.2",
+    "source-map-support": "^0.5.21"
   }
 }
