--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
     "aws-cdk-lib": "^2.205.0",
-    "constructs": "^10.4.2"
+    "constructs": "^10.4.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.14",
