--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,9 @@
   "resolutions": {
     "pdfjs-dist": "^3.0.279"
   },
-  "scripts": {
+"scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
